client/app/left/topics/folder/topic.folder.css
.topic-folder {
  position: relative;
  border-top: 1px solid rgba(0,0,0,0);
  border-bottom: 1px solid rgba(0,0,0,0);
  padding-bottom: 2px;
  padding-top:1px;
  margin-top:2px;
  margin-bottom:2px;
  min-height: 16px;
  -webkit-transition: background 0.2s, border 0.2s;
  -moz-transition: background 0.2s, border 0.2s;
  -ms-transition: background 0.2s, border 0.2s;
  -o-transition: background 0.2s, border 0.2s;
  transition: background 0.2s, border 0.2s;
}
.topic-folder-current {
  font-weight: 700;
}
.topic-folder.has-folder {
  padding-top:0px;
}
.topic-folder.has-folder:hover {
  background: #F1F1F1;
  border-top: 1px solid #e1e1e1;
  border-bottom: 1px solid #e1e1e1;
}
.topic-folder.has-folder.open {
  background: #F1F1F1;
  border-top: 1px solid #e1e1e1;
  border-bottom: 1px solid #e1e1e1;
}
.topic-folder.has-folder ul {
  background: transparent;
  padding-top:2px;
  padding-bottom:0px;
}

.topic-folder.hover ul {
	background-color:#ECF3F7;
	-webkit-transition: background 0.2s, border 0.2s;
  -moz-transition: background 0.2s, border 0.2s;
  -ms-transition: background 0.2s, border 0.2s;
  -o-transition: background 0.2s, border 0.2s;
  transition: background 0.2s, border 0.2s;	
}

.topic-folder.has-folder .topic-folder-area ul li {
	padding-left:10px;
	-webkit-transition: background 0.2s, border 0.2s;
  -moz-transition: background 0.2s, border 0.2s;
  -ms-transition: background 0.2s, border 0.2s;
  -o-transition: background 0.2s, border 0.2s;
  transition: background 0.2s, border 0.2s;
}

.topic-folder.has-folder .topic-folder-area ul li:hover {
	background: #E2E2E2;
}

.topic-folder.has-folder ul a {
	color:#737373;
}

.topic-folder.hover {
  /*background-color:#f2fbff;*/
  background-color:#ECF3F7 !important;
  border-top: 1px solid #C4DAEF !important;
  border-bottom:1px solid #C4DAEF !important;
}
.lpanel-list .topic-folder.hover ul li:hover {
	background-color:transparent;
	
}
.topic-folder-border {
  top: -3px;
  z-index: 730;
  position: absolute;
  height: 2px;
  width:100%;
  background: transparent;
  -webkit-transition: background 0.2s;
  -moz-transition: background 0.2s;
  -ms-transition: background 0.2s;
  -o-transition: background 0.2s;
  transition: background 0.2s;
}

.topic-folder-border.on{
  background:  #8CC0E6;
  opacity: 1;
}

.topic-folder-area {
  margin-top: 2px;
  border-top: 1px solid rgba(0,0,0,0);
  border-bottom: 1px solid rgba(0,0,0,0);
}


.topic-folder-title {
  font-size: 14px;
  line-height:28px;
  height: 28px;
  padding-right: 11px;
}

.topic-folder-area ul {
  background: transparent;
}
.topic-folder-dropzone-active {
  min-height: 28px;
}

.topic-folder-draggable {
  bottom: auto;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
  position: absolute;
  z-index: 999;
  overflow: hidden;
  height: 30px;
  opacity: 0.8;
}
.topic-folder-draggable > div {
	margin-top: 2px;
}

.topic-folder-area-icon {
  position: absolute;
  left: 10px;
  font-size:12px;
}

.topic-folder-area-title {
  position: relative;
  padding-left:23px;
  padding-right:10px;
}

.topic-folder-title-text {
  display: inline-block;
  padding-left: 28px;
  max-width: 150px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.topic-folder-title-text input {
  margin:0;
  padding: 0;
  width: 120px;
  line-height:20px;
  outline: 0;
  border: 1px solid #8CC0E6;
  margin-left:-1px;
}

.topic-folder-title-count {
  display: inline-block;
  vertical-align: top;
}

.topic-folder-more {
  position: absolute;
  text-align: center;
  right: 6px;
  width: 30px;
  color: #A0A0A0;
  font-size: 16px;
}
.topic-folder-more:hover {
	color: #737373;
}
.topic-folder-more-hide {
  /*display: none;*/
}

.topic-folder-badge {
  position: absolute;
  right: 11px;
  z-index: 800;
}

.topic-folder-badge .left-panel_badge {
  max-width: 100px;
}

